--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -4,108 +4,36 @@
     <title>{{ restaurant_name }} Menu</title>
     <style>
         body{
-          font-family:'Segoe UI',Tahoma,sans-serif;
-          margin:0;
-          padding:0;
-          color:#333;
-          background-color:#fdfdfd;
+          font-family:Arial,sans-serif;
+          text-align:center;
+          background-color:#f4f4f4;
         }
-        nav{
-          background:#ff6600;
-          padding:15px;
-          text-align: center;
+    
+        h1{
+         color:#333;
+        }
+        img{
+          border-radius: 10px;
+          max-width: 100%;
+        }
         
-        }
-
         nav a{
-          margin:0 15px;
-          font-weight:bold;
-          text-decoration: none;
-          color: white;
+          margin:0 10px;
+          text-decoration:none;
+          color:#007BFF;
         }
         nav a:hover{
-          text-decoration: underline;
+          text-decoration:underline;
         }
-
-        header{
-           text-align:center;
-           padding:20px;
-        }
-        header img{
-          margin-top:15px;
-          max-width:100%;
-          border-radius: 10px;
-        }
-        h1{
-         color:#ff6600;
-         margin-bottom: 10px;
-        }
-        .menu-container{
-          max-width: 900px;
-          margin: auto;
-          padding: 20px;
-        }
-
-        ul{
-          list-style:none;
-          padding:0;
-        
-        }
-
-        li{
-          margin-bottom: 15px;
-          padding: 15px;
-          background:#fff;
-          border-radius: 8px;
-          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        li strong{
-          font-size: 1.2em;
-          color: #333;
-        }
-        .price {
-          float:right;
-          color:#28a745;
-          font-weight: bold;
-        }
-        footer{
-          text-align:center;
-          padding: 15px;
-          background:#f4f4f4;
-          color:#777;
-          margin-top:20px;
-        
-        }
-
-
     </style>
 </head>
 
 <body>
+    <h1>Welcome to {{ restaurant_name }}</h1>
+    <img src="{{ image_url }}" alt="Restaurant">
     <nav>
-        <a href="{% url 'homepage'}">Home</a> |
-        <a href="{% url 'about' %}">About Us</a>
+        <a href="{% url 'menu_list' %}">View Menu</a>
+        <a href="% utl 'about' %">About Us</a>
     </nav>
-    <header>
-        <h1>Welcome to{{ restaurant_name }}</h1>
-    </header>
-    <div class ="menu-container">    
-      <h2>Our Menu</h2>
-      <ul>
-        {% for item in menu_items %}
-        <li>
-            <strong>{{ item.name }}</strong> 
-            <span class="price">Rs.{{ item.price }}</span>
-            <p>{{ item.description }}</p>
-        </li>
-        {% empty %}
-        <li>No Menu items available.</li>
-        {% endfor %}
-     </ul>
-    </div>
-    <footer>
-        &copy; {{ restaurant_name }} - All Rights Reserved
-    </footer>
 </body>
 </html>
-          
