--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -63,10 +63,10 @@
     <img src="{{ image_url }}" alt="Restaurant">
     <nav>
         <a href="{% url 'menu_list' %}">View Menu</a>
-        <a href="% utl 'about' %">About Us</a>
+        <a href="% url 'about' %">About Us</a>
     </nav>
 <footer>
-    &copy;{{ restaurant_name }}{{ now|date:"Y"}}|Designed with love |
+    &copy;{{ restaurant_name }}{{ now|date: "Y"}}|Designed with love |
     <a href="{% url 'about' %}">About Us</a>
     
 </footer>    
