--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -63,12 +63,13 @@
     <img src="{{ image_url }}" alt="Restaurant">
     <nav>
         <a href="{% url 'menu_list' %}">View Menu</a>
-        <a href="% url 'about' %">About Us</a>
+        <a href="{% url 'about' %}">About Us</a>
+        <a href="{% url 'contact_us' %}">Contact Us</a>
     </nav>
-<footer>
-    &copy;{{ restaurant_name }}{{ now|date: "Y"}}|Designed with love |
-    <a href="{% url 'about' %}">About Us</a>
-    
-</footer>    
+    <footer>
+    &copy;{{ restaurant_name }}{{ now|date:"Y" }}|Designed with love |
+    <a href="{% url 'about' %}">About Us</a> |
+    <a href="{% url 'contact_us' %}">Contact Us</a>
+    </footer>    
 </body>
 </html>
