--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -60,6 +60,7 @@
 
 <body>
     <h1>Welcome to {{ restaurant_name }}</h1>
+    <h2>Contact Us: {{ phone_number }}<h2>
     <img src="{{ image_url }}" alt="Restaurant">
     <nav>
         <a href="{% url 'menu_list' %}">View Menu</a>
