--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -84,7 +84,7 @@
           text-decoration:underline;
         }
         footer a:hover{
-           color:#ddd;
+           color:#fff;
         }
         
     </style>
