--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -109,7 +109,7 @@
     </div>
 
     <footer>
-        &copy;{{ restaurant_name }}{{ now|date:"Y" }}|Designed with love |
+        &copy;{{ restaurant_name }}{{ now|date:"Y" }}|Designed With Love |
         <a href="{% url 'about' %}">About Us</a> |
         <a href="{% url 'contact_us' %}">Contact Us</a>
     </footer>    
