--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -105,6 +105,7 @@
             <a href="{% url 'menu_list' %}">View Menu</a>
             <a href="{% url 'about' %}">About Us</a>
             <a href="{% url 'contact_us' %}">Contact Us</a>
+            <a href="{% url 'reservations' %}">reservations</a>
         </nav>
     </div>
 
