--- a/home/templates/contact_us.html
+++ b/home/templates/contact_us.html
@@ -62,6 +62,7 @@
           border-radius:5px;
           cursor: pointer;
         }
+        
         button:hover{
           background-color:#218838;
         }
@@ -86,7 +87,7 @@
             <input type="text" id="name" name="name">
             <label for="email" class="contact-label">Email:</label>
             <input type="email" id="email" name="email">
-            <label for="message" class=contact-label>Message:</label>
+            <label for="message" class="contact-label">Message:</label>
             <textarea id="message" name="message"></textarea>
             <p id="errorMessage" class="error"></p>
             <button type="submit">Submit</button>
@@ -99,7 +100,7 @@
           let email=document.getElementById("email").value.trim();
           let errorMessage=document.getElementById("errorMessage");
           if(name===""||email===""){
-            errorMessage.textContent="Please full in both Name and Email";
+            errorMessage.textContent="Please fill in both Name and Email";
             return false; //stop from submission
           }
           errorMessage.textContent=""; //Clear error if valid
