--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -105,14 +105,17 @@
             <a href="{% url 'menu_list' %}">View Menu</a>
             <a href="{% url 'about' %}">About Us</a>
             <a href="{% url 'contact_us' %}">Contact Us</a>
-            <a href="{% url 'reservations' %}">reservations</a>
+            <a href="{% url 'reservations' %}">Reservations</a>
         </nav>
     </div>
-
     <footer>
         &copy;{{ restaurant_name }}{{ now|date:"Y" }}|Designed With Love |
         <a href="{% url 'about' %}">About Us</a> |
         <a href="{% url 'contact_us' %}">Contact Us</a>
+
+        <div class="hours">
+            Opening Hours: Mon-Fri: 11am - 9pm | Sat-Sun: 10am - 10pm
+        </div>   
     </footer>    
 </body>
 </html>
