--- a/home/templates/contact_us.html
+++ b/home/templates/contact_us.html
@@ -108,6 +108,12 @@
           return true;
         }
     </script>
+    <footer>
+        &copy;{{ restaurant_name }}{{ now|date:"Y" }}|Designed With Love
+        <div class="hours">
+            Opening Hours: Mon-Fri: 11am-9pm | Sat-Sun: 10am - 10pm
+        </div>
+    </footer>
 
 </body>
 </html>
