--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -44,49 +44,11 @@
     <img src="{{image_url}}" alt="Our Restaurant">
     <br>
     <a href="{% url 'homepage' %}">Back to Menu</a>
+    <footer>
+        &copy;{{ restaurant_name }}{{ now|date:"Y" }}|Designed With Love
+    <div class="hours">
+        Opening Hours: Mon-Fri: 11am - 9pm | Sat-Sun: 10am - 10pm
+    </div>
+    </footer>
 </body>
 </html>    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
