--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -109,10 +109,7 @@
         </nav>
     </div>
     <footer>
-        &copy;{{ restaurant_name }}{{ now|date:"Y" }}|Designed With Love |
-        <a href="{% url 'about' %}">About Us</a> |
-        <a href="{% url 'contact_us' %}">Contact Us</a>
-
+        &copy;{{ restaurant_name }}{{ now|date:"Y" }}|Designed With Love
         <div class="hours">
             Opening Hours: Mon-Fri: 11am - 9pm | Sat-Sun: 10am - 10pm
         </div>   
