--- a/home/templates/menu_list.html
+++ b/home/templates/menu_list.html
@@ -44,5 +44,11 @@
         </div>
         {% endfor %}
     </div>
+    <footer> 
+        &copy;{{ restaurant_name }}{{ now|date:"Y" }}|Designed With Love
+        <div class="hours">
+            Opening Hours: Mon-Fri: 11am - 9pm | Sat-Sun: 10am - 10pm
+        </div>
+    </footer>
 </body>
 </html>
