--- a/home/templates/menu_list.html
+++ b/home/templates/menu_list.html
@@ -30,19 +30,53 @@
           color:green;
           font-weight:bold;
         }
+        .back-btn{
+          display: inline-block;
+          margin-top: 20px;
+          padding : 10px, 15px;
+          background: #2c3e50;
+          color: #fff;
+          text-decoration: none;
+          border-radius: 5px;
+        }
+        .back-btn:hover{
+          background: #1a242f;
+        }
+        footer{
+          background: #2c3e50;
+          color: #fff;
+          padding: 15px 0;
+          margin-top: 30px;
+          font-size: 14px;
+          text-align: center;
+        }
+        .hours{
+          margin-top: 8px;
+          font-size: 13px;
+          color: #ddd;
+        }
     </style>
 </head>
 <body>
     <h1>Our Menu</h1>
+    {% if menu_items %}
     <div class="menu-container">
         {% for item in menu_items %}
         <div class="menu-item">
             <h2>{{ item.name }}</h2>
+            {% if item.description %}
+            <p>{{ item.description }}</p>{% endif %}
             <p class="price">Rs. {{ item.price }}</p>
-            <p>{{ item.description }}</p>
         </div>
         {% endfor %}
     </div>
+    {% else %}
+    <p style="text-align:center;">No Menu Item Available at the moment. Please check back later !</p>
+    {% endif %}
+    <div style="text-align:center;">
+        <a href="{% url 'homepage' %}" class="back-btn">Back to Home</a>
+    </div>
+
     <footer> 
         &copy;{{ restaurant_name }}{{ now|date:"Y" }}|Designed With Love
         <div class="hours">
