--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ restaurant_name }} Menu</title>
     <style>
         body{
@@ -22,7 +22,7 @@
           padding: 15px 30px;
           position:relative;
           background:#fff;
-          box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1),
+          box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         
         }
         /* Logo Position */
@@ -141,9 +141,10 @@
         
         <!--Embedded Google Map-->
         <div style="margin-top: 20px;">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d119735.66023900273!2d85.73902972081146!3d20.311051839664323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s123%20Food%20Streert%2C%20Bhubaneswar%2C%20Odisha%2C%20India!5e0!3m2!1sen!2sin!4v1755765002670!5m2!1sen!2sin"
-                width = "600" height = "450" style = "border:0;" allowfullscreen="" loading="lazy" refferpolicy="no-referrer-when-downgrade">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d119735.66023900273!2d85.73902972081146!3d20.311051839664323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s123%20Food%20Street%2C%20Bhubaneswar%2C%20Odisha%2C%20India!5e0!3m2!1sen!2sin!4v1755765002670!5m2!1sen!2sin"
+                width = "100%" height = "400" style = "border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
+        </div>
 
     </section>
     <footer>
