--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -114,7 +114,7 @@
     <!---Header section with logo + title--->
     <header>
         <div class="logo-container">
-            <img src="https://dummyimage.com/200*80/2b0060/ffffff&text=My+Restaurant" alt="Restaurant Logo">
+            <img src="https://dummyimage.com/200x80/2b0060/ffffff&text=My+Restaurant" alt="Restaurant Logo">
         </div>
         <h1>Welcome to {{ restaurant_name }}</h1>
     </header>
