--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -30,10 +30,12 @@
           position:absolute;
           left:20px;
         }
-        .logo-container img{
-               width: 50px;
-               height : 50px;
-               border-radius: 10px;
+        .logo-img{
+          width: 50px;
+          height : 50px;
+          border-radius: 8px;
+          display: block;
+          margin: 0;
         }
         /* Title in header*/
         header h1{
@@ -113,10 +115,12 @@
 <body>
     <!---Header section with logo + title--->
     <header>
+      {% if restaurant.logo %}
         <div class="logo-container">
-            <img src="https://dummyimage.com/200x80/2b0060/ffffff&text=My+Restaurant" alt="Restaurant Logo">
+            <img src="{{ restaurant.logo.url}}" alt="{{ restaurant.name }} Logo" class="logo-img">
         </div>
-        <h1>Welcome to {{ restaurant_name }}</h1>
+      {% endif %}
+        <h1>Welcome to {{ restaurant.name }}</h1>
     </header>
     <!-- Search Bar -->
     <div class="search-bar">
