--- a/home/templates/contact_us.html
+++ b/home/templates/contact_us.html
@@ -36,13 +36,13 @@
           display:inline-block;
           margin-top: 20px;
           padding:10px 15px;
-          background-color: #007BFF;
-          color: white;
+          background-color: #2c3e50;
+          color: #fff;
           text-decoration: none;
           border-radius:5px;
         }
         .back-btn:hover{
-          background-color:#0056b3;
+          background-color:#1a242f;
         }
         form {
           margin-top: 20px;
@@ -99,17 +99,26 @@
         <!---Contact Form--->
         <form method="post" action="{% url 'contact_us' %}">
             {% csrf_token %}
-            <label for="name" class="contact-label">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email" class="contact-label">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="message" class="contact-label">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-            <p id="errorMessage" class="error"></p>
+            <!-- Non-field errors (general form errors) -->
+            {{ form.non_field_errors }}
+            <label for="id_name" class="contact-label">Name:</label>
+            {{ form.name }}
+            {{ form.name.errors }}
+
+            <label for="id_email" class="contact-label">Email:</label>
+            {{ form.email }}
+            {{ form.name.errors }}
+
+            <label for="id_message" class="contact-label">Message:</label>
+            {{ form.message }}
+            {{ form.message.errors }}
+
             <button type="submit">Submit</button>
         </form>
     </div>
-    <a href="{% url 'homepage' %}" class="back-btn">Back to Home</a>
+    <div style="text-align:center;">
+        <a href="{% url 'homepage' %}" class="back-btn">Back to Home</a>
+    </div>
     <footer>
         &copy;{{ restaurant_name }}{{ now|date:"Y" }}|Designed With Love
         <div class="hours">
