--- a/home/templates/cart.html
+++ b/home/templates/cart.html
@@ -42,7 +42,7 @@
             {% for item in cart_items %}
             <tr>
                 <td>{{ item.name }}</td>
-                <td>{{ item.quantity</td>
+                <td>{{ item.quantity }}</td>
                 <td>Rs.{{ item.price }}</td>
                 <td>Rs.{ item.subtotal }}</td>
             </tr>
