--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -131,7 +131,7 @@
             <img src="{{ restaurant.logo.url }}" alt="{{ restaurant.name }} Logo" class="logo-img">
         </div>
       {% endif %}
-      <h1>Welcome to {{ restaurant.name }}</h1>
+      <h1>Welcome To {{ restaurant.name }}</h1>
       <div class="cart-counter">Cart {{ total_items }}</div>
     </header>
     <!-- Search Bar -->
